# hsc3-lang-1

./: .boring  Makefile  README  hsc3-lang.cabal  stack.yaml
Help/Collection/: collection.help.lhs  collection.lhs  extension.lhs
Help/Control/: pitch.lhs
Help/Math/: pitch.help.lhs
Help/Pattern/: Makefile  arpeggio.hs  id.lhs  list.lhs  pappend.help.lhs  parallel.lhs  pattern.help.lhs  pattern.lhs  pclutch.help.lhs  pcollect.help.lhs  pcontinue.help.lhs  pcountpre.help.lhs  pcycle.help.lhs  pdegreeToKey.help.lhs  pdrop.help.lhs  pempty.help.lhs  pexprand.help.lhs  pfilter.help.lhs  pfin.help.lhs  pfix.help.lhs  pgeom.help.lhs  phead.help.lhs  pif.help.lhs  pinterleave.help.lhs  plain.lhs  pn.help.lhs  ppatlace.help.lhs  prand.help.lhs  preject.help.lhs  prepeat.help.lhs  prorate.help.lhs  prsd.help.lhs  pscan.help.lhs  pscanl.help.lhs  pseq.help.lhs  pser.help.lhs  pseries.help.lhs  pstutter.help.lhs  pswitch.help.lhs  pswitch1.help.lhs  (+7 more)
Help/Pattern/List/: pappend.help.lhs  pattern.help.lhs  pbind.help.lhs  pbool.help.lhs  pchoose.help.lhs  pclutch.help.lhs  pcollect.help.lhs  pcountpre.help.lhs  pcycle.help.lhs  pdegreeToKey.help.lhs  pdrop.help.lhs  pempty.help.lhs  pfilter.help.lhs  pfin.help.lhs  pgeom.help.lhs  phead.help.lhs  pif.help.lhs  pinterleave.help.lhs  place.help.lhs  pn.help.lhs  prand.help.lhs  preject.help.lhs  prepeat.help.lhs  preplicate.help.lhs  prorate.help.lhs  prsd.help.lhs  psep.help.lhs  pseq.help.lhs  pser.help.lhs  pseries.help.lhs  pshuf.help.lhs  pslide.help.lhs  pstutter.help.lhs  pswitch.help.lhs  pswitch1.help.lhs  ptail.help.lhs  ptake.help.lhs  ptrigger.help.lhs  pwhite.help.lhs  pwrand.help.lhs  (+4 more)
Help/Pattern/Step/: pappend.help.lhs  pattern.help.lhs  pclutch.help.lhs  pcollect.help.lhs  pcontinue.help.lhs  pcountpre.help.lhs  pcycle.help.lhs  pdegreeToKey.help.lhs  pdrop.help.lhs  pempty.help.lhs  pexprand.help.lhs  pfilter.help.lhs  pfin.help.lhs  pfix.help.lhs  pgeom.help.lhs  phead.help.lhs  pif.help.lhs  pinterleave.help.lhs  pn.help.lhs  ppatlace.help.lhs  prand.help.lhs  preject.help.lhs  prepeat.help.lhs  prorate.help.lhs  prp.lhs  prsd.help.lhs  pscan.help.lhs  pscanl.help.lhs  pseq.help.lhs  pser.help.lhs  pseries.help.lhs  pstutter.help.lhs  pswitch.help.lhs  pswitch1.help.lhs  ptail.help.lhs  ptake.help.lhs  ptrigger.help.lhs  pwhite.help.lhs  pwrap.help.lhs  pxrand.help.lhs
Help/Pattern/Step/prp/: x-c.hs
Sound/SC3/: Lang.hs
Sound/SC3/Lang/: Collection.hs  Core.hs  Math.hs  Pattern.hs
Sound/SC3/Lang/Collection/: Array.hs  Collection.hs  Event.hs  Extension.hs  Gen.hs  Numerical.hs  SequenceableCollection.hs  Vector.hs
Sound/SC3/Lang/Collection/Numerical/: Extending.hs  Truncating.hs
Sound/SC3/Lang/Collection/Universal/: Datum.hs
Sound/SC3/Lang/Collections/: Collection.hs  SequenceableCollection.hs
Sound/SC3/Lang/Control/: Duration.hs  Event.hs  Instrument.hs  Midi.hs  OverlapTexture.hs  Pitch.hs  Spec.hs
Sound/SC3/Lang/Control/Midi/: KY.hs  OSC.hs  ST.hs
Sound/SC3/Lang/Control/Midi/OSC/: SC3.hs
Sound/SC3/Lang/Data/: CMUdict.hs  Modal.hs  Vowel.hs
Sound/SC3/Lang/Events/: OverlapTexture.hs
Sound/SC3/Lang/Math/: Binary.hs  Chebyshev.hs  Datum.hs  Duration.hs  Pitch.hs  Random.hs  SimpleNumber.hs  Statistics.hs  Warp.hs  Window.hs
Sound/SC3/Lang/Pattern/: Bind.hs  Control.hs  Event.hs  Extend.hs  ID.hs  List.hs  P.hs  Parallel.hs  Pattern.hs  Plain.hs  Random.hs  Step.hs  Stream.hs
Sound/SC3/Lang/Pattern/P/: Base.hs  Core.hs  Event.hs  SC3.hs
Sound/SC3/Lang/Random/: Gen.hs  ID.hs  IO.hs  Lorrain_1980.hs  Monad.hs  Server.hs
Sound/SC3/Lang/UI/: X11.hs
help/md/: random.md
