Name:              hsc3-lang
Version:           0.17
Synopsis:          Haskell SuperCollider Language
Description:       Haskell library defining operations from the
                   SuperCollider language class library
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, 2007-2017
Author:            Rohan Drape
Maintainer:        rd@slavepianos.org
Stability:         Experimental
Homepage:          http://rd.slavepianos.org/t/hsc3-lang
Tested-With:       GHC == 8.0.1
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

Library
  Build-Depends:   base >= 4.8,
                   bifunctors,
                   bytestring,
                   containers,
                   data-default,
                   data-ordlist,
                   dlist,
                   hashable,
                   hmatrix-special,
                   hosc == 0.17.*,
                   hsc3 == 0.17.*,
                   MonadRandom,
                   transformers,
                   split,
                   random,
                   random-shuffle,
                   transformers
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.SC3.Lang.Collection
                   Sound.SC3.Lang.Collection.Extension
                   Sound.SC3.Lang.Collection.Numerical.Extending
                   Sound.SC3.Lang.Collection.Numerical.Truncating
                   Sound.SC3.Lang.Collection.Universal.Datum
                   Sound.SC3.Lang.Control.Duration
                   Sound.SC3.Lang.Control.Event
                   Sound.SC3.Lang.Control.Instrument
                   Sound.SC3.Lang.Control.Pitch
                   Sound.SC3.Lang.Control.OverlapTexture
                   Sound.SC3.Lang.Control.Spec
                   Sound.SC3.Lang.Core
                   Sound.SC3.Lang.Math
                   Sound.SC3.Lang.Math.Statistics
                   Sound.SC3.Lang.Math.Warp
                   Sound.SC3.Lang.Math.Window
                   Sound.SC3.Lang.Pattern
                   Sound.SC3.Lang.Pattern.Bind
                   Sound.SC3.Lang.Pattern.List
                   Sound.SC3.Lang.Pattern.P
                   Sound.SC3.Lang.Pattern.P.Base
                   Sound.SC3.Lang.Pattern.P.Core
                   Sound.SC3.Lang.Pattern.P.Event
                   Sound.SC3.Lang.Pattern.P.SC3
                   Sound.SC3.Lang.Pattern.Plain
                   Sound.SC3.Lang.Pattern.Stream
                   Sound.SC3.Lang.Random.Lorrain_1980
                   Sound.SC3.Lang.Random.Gen
                   Sound.SC3.Lang.Random.ID
                   Sound.SC3.Lang.Random.IO
                   Sound.SC3.Lang.Random.Monad
                   Sound.SC3.Lang.Random.Server

Source-Repository  head
  Type:            darcs
  Location:        http://rd.slavepianos.org/sw/hsc3-lang/
